<resources>
    <string name="app_name" translatable="false">Thundergram</string>
    <string name="char_plus" translatable="false">+</string>
    <string name="system_language" translatable="false">en</string>
    <string name="first_speed" translatable="false">x1</string>
    <string name="second_speed" translatable="false">x2</string>
    <string name="third_speed" translatable="false">x3</string>
    <string name="phone_number">Enter phone number</string>
    <string name="enter_code">Enter code</string>
    <string name="enter_password">Enter password</string>
    <string name="login_description_text">To enter the application you must have a Telegram account. Also, you must have access to the messenger to receive the verification code.</string>
    <string name="send">Send</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="send_sms_code">Send the code as an SMS</string>
    <string name="helper_text_phone">Check if the number is entered correctly. The number must start with a \"+\" sign, followed by your country code, followed by the main number. Also make sure there are no extra characters or spaces in the number.</string>
    <string name="helper_text_code">The code must contain 5 numbers, no letters, spaces, or extra characters.</string>
    <string name="enter_message">Enter message</string>
    <string name="access_to_call">Request permission</string>
    <string name="explanation_get_call">Requires phone calls permission to use the app in full</string>
    <string name="grant_access">Allow access</string>
    <string name="do_not">Do not</string>
    <string name="catch_phone_number">Catch phone number</string>
    <string name="don_t_catch_phone_number">Don\'t catch phone number</string>
    <string name="money">Money</string>
    <string name="lack_count_message">You don\'t have enough points. Top up your counter</string>
    <string name="ads_not_ready">The rewarded ad wasn\'t ready yet</string>
    <string name="billing_canceling">Error caused by a user cancelling the purchase flow</string>
    <string name="any_other_error">Any other error</string>
    <string name="service_connected_message">Choose how many coins you need</string>
    <string name="photo_message">Photo message</string>
    <string name="voice_message">Voice message</string>
    <string name="service_title">It is not recommended to disable this service</string>
    <string name="service_message">This service allows you to catch the phone numbers of the user you have chosen and receive new notifications.</string>
    <string name="tutor_skip">Skip</string>
    <string name="tutor_next">Continue</string>
    <string name="tutor_step0_text">This is an application to track the sending of a phone number based on the Telegram messenger. Unofficial version of the Telegram messenger. Contains minimal messenger functions. The main purpose of the application is to track the sending of a phone number from a specific user in a specific chat. The moment the user you follow sends a phone number, the app will automatically call that number, provided the app is open.</string>
    <string name="tutor_step1_text">First you must enter the application using the phone number that you have assigned to your Telegram account</string>
    <string name="tutor_open_chat">Then, from your list, open the chat you need or personal correspondence with the user</string>
    <string name="tutor_choose_user">Hold the area anywhere near the icon of the user whose number you want to catch</string>
    <string name="tutor_step3_text">A small pop-up window will appear next to the user icon, you must click it to start catching phone numbers from the selected user</string>
    <string name="tutor_step4_text">And as soon as the user you subscribed to sends any phone number, the application will automatically make the call before it is visible in the chat</string>
    <string name="notification_disabled">Notification disabled</string>
    <string name="settings_text">Settings</string>
</resources>