...
            app:clickAction="transitionToStart"
            app:targetId="@id/app_bar_layout" />

        <OnSwipe
            app:dragDirection="dragUp"
            app:moveWhenScrollAtTop="false"
            app:touchAnchorId="@id/main_container"
            app:touchAnchorSide="top" />
    </Transition>

    <ConstraintSet android:id="@+id/expanded">
        <Constraint
            android:id="@id/money_image"
...
